objects/US_CS_Test__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Field_2__c</fullName>
        <label>Field 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field 3</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed 1</label>
        <type>Checkbox</type>
    </fields>
    <label>US CS Test</label>
</CustomObject>